@@ -1,5 +1,6 @@
 package com.monke.user;
 
+import com.monke.identity.Identities;
 import com.monke.rental.Contacts;
 import com.monke.rental.Flat;
 import com.monke.rental.Rental;
@@ -45,8 +46,8 @@ public class Mocks {
             UUID.randomUUID().toString(),
             List.of("https://sun1-91.userapi.com/s/v1/if1/nlwrIHMavQQQCrtrznR0aqYprdCm6W09-YP8GPiio9QVE1-iziHN6XtYGGeMrHNVHbtR-Bn7.jpg?size=862x862&quality=96&crop=166,0,862,862&ava=1"),
             "I am Berkoff Man",
-            Collections.emptyList()
-            );
+            List.of(Identities.HAS_ANIMALS)
+    );
 
     static User mockUser = new User(
             userId,
